# DepotGate

./: .env.example  .gitignore  Below is a comprehensive code revie.txt  CODE_REVIEW_1.md  DepotGate v0 spec.txt  Dockerfile  LICENSE.md  README.md  Untitled.txt  docker-compose.yml  init-db.sql  pyproject.toml
.claude/: SECURITY_PUNCHLIST.md
src/depotgate/: __init__.py  auth.py  config.py  main.py
src/depotgate/api/: __init__.py  routes.py
src/depotgate/core/: __init__.py  deliverables.py  models.py  receipts.py  shipping.py  staging.py
src/depotgate/db/: connection.py  models.py
src/depotgate/mcp/: __init__.py  routes.py
src/depotgate/middleware/: rate_limit.py
src/depotgate/sinks/: __init__.py  base.py  factory.py  filesystem.py  http.py
src/depotgate/storage/: __init__.py  base.py  factory.py  filesystem.py
tests/: __init__.py  conftest.py  test_api.py  test_mcp.py  test_models.py  test_sinks.py  test_storage.py
